# anny-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: anthropometry.rs  face_segmentation.rs  kinematics.rs  lib.rs  parameters_regressor.rs  paths.rs  phenotype.rs  rotation.rs  shape_distribution.rs  skinning.rs
src/data/: mod.rs  obj.rs  pickle.rs  target_gz.rs
src/models/: full_model.rs  macrodetails.rs  mod.rs  presets.rs  retopology.rs  rig.rs
src/utils/: interpolation.rs  mesh.rs  mod.rs
tests/: cuda_parity.rs  data_loaders.rs  golden_alt_topology.rs  golden_forward.rs  golden_smplx.rs  local_changes.rs  parity.rs  regressor.rs  topology_default.rs
tests/fixtures/: alt_topology_counts.txt  convert_smplx.py  export_golden.py  preset_counts.txt  pruned_counts.txt  smplx_counts.txt  topology_default_counts.txt
