[package]
name = "anny-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "anny-cli"
path = "src/bin/anny-cli.rs"

[features]
default = []
smplx-download = ["dep:reqwest"]

[dependencies]
candle-core = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png"] }
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
thiserror = "1"
anyhow = "1"
reqwest = { version = "0.12", optional = true, default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
approx = "0.5"
